--- a/src/main/java/br/edu/projeto/View/view/Purchase.form
+++ b/src/main/java/br/edu/projeto/View/view/Purchase.form
@@ -260,6 +260,9 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Times New Roman" size="24" style="1"/>
         </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Purchase"/>
       </Properties>
     </Component>
